08222013 -> jonnyboy -> added option to site-edit to allow user control of of delay time
                        updated predb matched to get from releases table
08212013 -> jonnyboy -> added color to h4 tag
                        possible fix for db lose connection in tmux when db is not local
                        added option for alternate sequential run in tmux
08212013 -> kevin    -> Add memcache support. Add the following under define('NNTP_SSLENABLED_A', false); in your config.php. Set to true to enable. (for ubuntu -> sudo apt-get install memcached php5-memcache)

                        // Wether to use memcached or not.
                        define('MEMCACHE_ENABLED', false);
                        define('MEMCACHE_HOST', '127.0.0.1');
                        define('MEMCACHE_PORT', '11211');
                        // Amount of time to keep a query in ram in seconds.
                        define('MEMCACHE_EXPIRY', '900');
                        // To compress the queries using zlib or not (more cpu usage and less ram usage if set to true, inverse for false);
                        define('MEMCACHE_COMPRESSION', true);

                        Also edit /etc/php5/apache2/php.ini, add       extension=memcache.so      to the dynamic extensions section and restart apache2.

08202013 -> kevin    -> 08 17 to 08 20 : More clean up, convert the simple theme, more regex for matching etc.., fix queries for poster/subject searching, change movie.php to catch movies better.
08162013 -> kevin    -> Fix more issues in postprocess.php
                        More checks on hidden nfos to see if it's an NFO or not.
08152013 -> kevin    -> 08 13 to 08 15 : Clean up files in www/lib, add fetching names from PAR2 files.
08152013 -> ThePeePs -> Site stats for alpha theme.
08152013 -> Josh     -> Update themes.
08122013 -> bodrick  -> Fixed bug with namefixer, if print changes only, status was still being set to updated.